--- a/files/home.html
+++ b/files/home.html
@@ -2,9 +2,114 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
+    <link rel="icon" type="image/x-icon" href="/icon/home.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="home.css" />
     <title>House Rent</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="logo">
+        <h1>
+          House Re
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#e8eaed"
+          >
+            <path
+              d="M80-120v-80h160v-160h-80v-80h84q12-75 66.5-129.5T440-636v-204h280v160H520v44q75 12 129.5 66.5T716-440h84v80h-80v160h160v80H80Zm240-80h120v-160H320v160Zm200 0h120v-160H520v160ZM326-440h308q-14-53-57-86.5T480-560q-54 0-97 33.5T326-440Zm154 0Z"
+            />
+          </svg>
+        </h1>
+      </div>
+      <div class="menu">
+        <ul>
+          <li>Home</li>
+          <li>Rent</li>
+          <li>Agent</li>
+          <li>Favorites</li>
+          <li>Rent House</li>
+          <li>About</li>
+        </ul>
+      </div>
+      <div class="user">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24">
+          <title>account-circle</title>
+          <path
+            d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
+          />
+        </svg>
+      </div>
+    </nav>
+    <header>
+      <div class="left">
+        <div>
+          <h3>THE KEY TO</h3>
+          <h1>Your Home</h1>
+          <p>
+            we are Real Estate agency that will help you to find the most
+            suitable residence for you
+          </p>
+        </div>
+        <div class="search">
+          <input type="text" placeholder="Search your home here" />
+          <button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="feather feather-search"
+            >
+              <circle cx="11" cy="11" r="8"></circle>
+              <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+            </svg>
+          </button>
+        </div>
+        <div class="details">
+          <div>
+            <h1>3k+</h1>
+            <p>
+              Happy <br />
+              Customer
+            </p>
+          </div>
+          <div>
+            <h1>8k+</h1>
+            <p>
+              Premium <br />
+              Product
+            </p>
+          </div>
+          <div>
+            <h1>22+</h1>
+            <p>
+              Awards <br />
+              Winning
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <div>video</div>
+        <div>img 01</div>
+        <div>img 02</div>
+      </div>
+    </header>
+  </body>
 </html>
